devops/bootstrap_kind_cluster/helm_charts/signoz/signoz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz
  namespace: signoz
spec:
  tls:
  - hosts:
    - signoz.codepraxis.dev
    secretName: signoz-cert-route53-tls
  rules:
    - host: signoz.codepraxis.dev
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: signoz-frontend
              port:
                number: 3301
